--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatabaseContext": "Data Source=DatabaseContext-8f204349-e227-4f62-af9a-6f3c1620b7ea.db"
+  }
 }
