--- a/src/appsettings.json
+++ b/src/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DatabaseContext": "Data Source=DatabaseContext-8f204349-e227-4f62-af9a-6f3c1620b7ea.db"
+    "DatabaseContext": "Data Source=zmdh-database.mssql.somee.com;Initial Catalog=zmdh-database;User Id=ZMDH_SQLLogin_1;Password=7e3j8yv817"
+    
   }
 }
